fix(different components): fix small layout bugs (#1338)
---------

--- a/src/components/Teaser/Teaser.scss
+++ b/src/components/Teaser/Teaser.scss
@@ -1,5 +1,5 @@
 .Teaser {
-    padding: var(--space-150);
+    width: 100%;
     display: flex;
     gap: var(--space-150);
     color: var(--color-neutral-60);
@@ -17,6 +17,10 @@
         flex-grow: 1;
         display: flex;
         flex-direction: column;
+    }
+
+    &__checkbox {
+        align-self: flex-start;
     }
 
     &__title {
